<resources>
    <string name="app_name">SmartNote</string>
    <string name="note_s_name">Note\'s Name</string>
    <string name="note_1">Note 1</string>
    <string name="title_activity_bottom__nav">Bottom_Nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="get_school_notes_from_top_students">Get School Notes from Top Students</string>
    <string name="select_faculty">Select Faculty</string>
    <string name="downloads">Downloads</string>
    <string name="repository">Repository</string>
    <string name="upload_note">Upload Note</string>
    <string name="profile">Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="click_here_to_sign_in">Click here to sign in..</string>
    <string name="click_here_to_register">Click here to register..</string>
    <string name="my_notefinder_profile">My SmartNote Profile</string>
    <string name="faculty">Faculty</string>
    <string name="my_repo">My Repo</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="name">NAME</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_">SIGN IN</string>
    <string-array name="faculties_array_list">
        <item>FACULTY OF TECHNOLOGY</item>
        <item>FACULTY OF SCIENCE</item>
        <item>FACULTY OF EDUCATION</item>
        <item>FACULTY OF ARTS</item>
        <item>FACULTY OF PHARMACY</item>
        <item>COLLEGE OF HEALTH SCIENCES</item>
        <item>FACULTY OF LAW</item>
        <item>FACULTY OF SOCIAL SCIENCES</item>
        <item>FACULTY OF ADMINISTRATION</item>
    </string-array>

</resources>
