<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activities.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="350dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:background="@android:color/holo_red_light"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="45dp"
                            android:src="@drawable/img_user"
                            android:tint="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:text=""
                            android:textColor="#fff"
                            android:textSize="21sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <android.support.v7.widget.CardView
                        android:layout_width="330dp"
                        android:layout_height="90dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="240dp"
                        app:cardCornerRadius="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">


                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/name"
                                    android:textSize="20sp" />

                                <TextView
                                    android:id="@+id/profile_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="10dp"
                                    android:text=""
                                    android:textAllCaps="true"
                                    android:textColor="@android:color/holo_green_light"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />


                            </LinearLayout>


                        </LinearLayout>

                    </android.support.v7.widget.CardView>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:id="@+id/activationardId"
                            android:layout_width="300dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:foreground="?android:attr/selectableItemBackground">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/faculty"
                                    android:textStyle="bold" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_margin="10dp"
                                    android:background="@color/lightgray" />

                                <TextView
                                    android:id="@+id/faculty_view"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:padding="0dp"
                                    android:text=""
                                    android:textColor="@android:color/darker_gray" />

                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:gravity="center"
                        android:orientation="horizontal">


                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:id="@+id/phone_number_card"
                            android:layout_width="300dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:foreground="?android:attr/selectableItemBackground">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/phone_number"
                                    android:textStyle="bold" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_margin="10dp"
                                    android:background="@color/lightgray" />

                                <TextView
                                    android:id="@+id/phone_view"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:padding="0dp"
                                    android:text=""
                                    android:textColor="@android:color/darker_gray" />

                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:gravity="center"
                        android:orientation="horizontal">


                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:id="@+id/email_card"
                            android:layout_width="300dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:foreground="?android:attr/selectableItemBackground">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/email"
                                    android:textStyle="bold" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_margin="10dp"
                                    android:background="@color/lightgray" />

                                <TextView
                                    android:id="@+id/email_view"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:padding="0dp"
                                    android:text=""
                                    android:textColor="@android:color/darker_gray" />

                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:gravity="center"
                        android:orientation="horizontal">


                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/button_logout"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
                    android:background="@drawable/buttonshape"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="Logout" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>